--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@google/generative-ai": "^0.22.0",
     "body-parser": "^1.20.3",
+    "cors": "^2.8.5",
     "dotenv-extended": "^2.9.0",
     "env": "^0.0.2",
     "express": "^4.21.2"
